--- a/onstep/css/styles.css
+++ b/onstep/css/styles.css
@@ -16,7 +16,7 @@ button {
 #main-container {
     padding: 2px;
     margin: 2px;
-    border: 2px solid red;
+    border-top: 2px solid red;
 }
 .errorField {
     display: block;
