--- a/onstep/css/styles.css
+++ b/onstep/css/styles.css
@@ -8,12 +8,14 @@ body {
     height: 400px;
 }
 button {
-    margin: 1em;
+    font-size: 1.0em;
+    font-weight: bold;
+    margin: 1.0em;
     border: 2px solid red;
     border-radius: 40px;
     background-color: black;
     color: red;
-    padding: 0.5em;
+    padding: 0.35em 0.7em;
 }
 #info-container,
 #main-container {
@@ -37,6 +39,8 @@ label {
 .active_button {
     border: 5px solid red;
     border-radius: 40px;
+    background-color: red;
+    color: black;
 }
 table {
     border-collapse: collapse;
